--- a/appointment_report.Rmd
+++ b/appointment_report.Rmd
@@ -65,7 +65,7 @@ kable(appt_by_agency, "latex", booktabs = T,
   kable_styling(latex_options = c("striped", "hold_position"))
 ```
 
-```{r fig.align="center"}
+```{r fig.align="center", fig.width=12, fig.height=6}
 appt_over_time <- records %>%
   count(test_date_and_time, covid_19_swab_result) %>% 
   filter(covid_19_swab_result != 'Waiting for Results')
@@ -75,6 +75,7 @@ ggplot(appt_over_time, aes(x = test_date_and_time, y = n,
   geom_line()+
   geom_point()+
   scale_y_continuous(breaks = seq(0, max(appt_over_time$n), by = 20))+
+  scale_x_date(date_breaks = "2 day", date_labels = "%b-%d")+
   labs(x = "Appointment Date", y = "# Persons", 
        title = "Appointment Outcome Over Time",
        colour = "Outcome")+
