--- a/survey_report.Rmd
+++ b/survey_report.Rmd
@@ -1,5 +1,6 @@
 ---
 title: "Survey Report"
+date: "`r Sys.Date()`"
 output: pdf_document
 ---
 
@@ -15,6 +16,7 @@ library(REDCapR)
 library(lubridate)
 library(janitor)
 library(kableExtra)
+library(skimr)
 source("functions.R")
 ```
 
@@ -33,19 +35,37 @@ all_fields <- checkbox_fields %>%
   bind_rows(radio_fields) %>% 
   bind_rows(yes_no_fields) %>% 
   mutate(percent = round((n/total_tests*100),1),
-         "n (%)" = paste0(n, " (", percent,")")) %>% 
-  select(field_label, "Variable" = label, "n (%)") %>% 
-  mutate_at(vars("field_label"), ~ str_remove(., "^If yes, ")) %>% 
-  mutate_at(vars("field_label"), ~ str_to_title(.)) %>% 
+         "N (%)" = paste0(n, " (", percent,")")) %>% 
+  select(field_label, "Variable" = label, "N (%)") %>% 
+  mutate_at(vars("field_label"), ~ str_to_title(str_remove(., "^If yes, "))) %>% 
   arrange(field_label) 
   
 ```
 
-### Report Run `r Sys.Date()`
-This report shows the
+This report gives the summary statistics for the First Responder Covid 19 questionnaires. Both Tables 1 and 2 excludes NAs. The total number of swab results completed is `r total_tests`
 ```{r}
-kable(all_fields %>% select(-field_label), booktabs = T, longtable = T) %>% 
+kable(all_fields %>% select(-field_label), booktabs = T, longtable = T,
+      caption = "Categorical Variables") %>% 
   kable_styling(latex_options = "repeat_header") %>% 
   pack_rows(index = auto_index(all_fields$field_label))
+```
+
+```{r}
+numeric_cols <- records %>% 
+  select("Patient Age" = patient_age, 
+         "Weekly hours spent on front line with direct patient contact" = q_hours_contact_patient,   
+         "Weekly hours spent on the front line with public contact" = q_hours_contact_public) %>% 
+  mutate_if(is.character, parse_number) %>%   
+  skim() %>% 
+  mutate(complete_rate = complete_rate * 100) %>% 
+  select("Variable" = skim_variable, "Complete Rate" = complete_rate,
+         "Mean" = numeric.mean, "Median" = numeric.p50, "SD" = numeric.sd) %>%  
+  mutate_if(is.numeric, round, 1)
+
+```
+
+```{r}
+kable(numeric_cols, booktabs = T, caption = "Numeric Variables") %>% 
+  kable_styling()
 ```
 
