--- a/survey_report.Rmd
+++ b/survey_report.Rmd
@@ -21,10 +21,8 @@ source("functions.R")
 ```
 
 ```{r}
-# download data dictionary and place it in data folder
-data_dictionary <- list.files("data", "FirstResponderCOVID19TestingPr")
-data_dictionary <- read.csv(paste0("data/", data_dictionary)) %>% 
-  clean_names()
+data_dictionary <-  redcap_metadata_read(redcap_uri = 'https://redcap.ctsi.ufl.edu/redcap/api/',
+                     token = Sys.getenv("TOKEN"))$data
 
 records <- get_records()
 
