--- a/appointment_report.Rmd
+++ b/appointment_report.Rmd
@@ -33,30 +33,32 @@ For subjects with multiple tests priority is given to positive swab results
 
 ```{r}
 # read appointment data betewwen 2020-04-08 and current_date 
-records <- get_records(raw_or_label = "label") %>% 
-  mutate(test_date_and_time = as_date(test_date_and_time),
-         days_since_appt = current_date - test_date_and_time) %>% 
-  filter(between(test_date_and_time, project_start_date, current_date))  
+records <- get_records(raw_or_label = "label") 
   
-records <- records %>%
-  # priority is given to positive results when there are multiple tests per subject
+filtered_records <- records %>%
+   mutate(test_date_and_time = as_date(test_date_and_time),
+         days_since_appt = current_date - test_date_and_time) %>% 
+  filter(between(test_date_and_time, project_start_date, current_date),
+         !is.na(ce_email)) %>% 
   arrange(record_id, desc(covid_19_swab_result)) %>% 
   mutate(
     covid_19_swab_result = case_when(
       days_since_appt > 2 & is.na(covid_19_swab_result) ~ "No Show",
       days_since_appt <= 2 & is.na(covid_19_swab_result) ~ "Waiting for Results",
       TRUE ~ covid_19_swab_result)) %>% 
-  # select a unique subject
+  # priority is given to positive results when there are multiple tests per subject
   distinct(record_id, .keep_all = T) %>% 
   select("Agency" = q_agency, covid_19_swab_result, test_date_and_time)
 
-result_total <- records %>%
+result_total <- filtered_records %>%
   count(covid_19_swab_result) %>% 
-  pivot_wider(names_from = covid_19_swab_result, values_from = n) %>%  
-  mutate(Total = rowSums(.[])) %>% 
-  mutate_all(as.character) 
-
-appt_by_agency <- records %>% 
+  mutate(perc = round(n/sum(n),3)*100,
+         n = paste0(n, " (", perc,"%)")) %>% 
+  select(-perc) %>% 
+  pivot_wider(names_from = covid_19_swab_result, values_from = n) %>% 
+  add_column("Total" = as.character(nrow(filtered_records)))
+  
+appt_by_agency <- filtered_records %>% 
   count(Agency, covid_19_swab_result) %>%  
   group_by(Agency) %>% 
   mutate(perc = round(n/sum(n),2)*100,
@@ -78,7 +80,7 @@ kable(appt_by_agency, "latex", booktabs = T,
 ```
 
 ```{r fig.align="center", fig.width=12, fig.height=6}
-appt_over_time <- records %>%
+appt_over_time <- filtered_records %>%
   count(test_date_and_time, covid_19_swab_result) %>% 
   filter(covid_19_swab_result != 'Waiting for Results')
 
