--- a/survey_report.Rmd
+++ b/survey_report.Rmd
@@ -24,13 +24,17 @@ source("functions.R")
 data_dictionary <- redcap_metadata_read(redcap_uri = Sys.getenv("URI"),
                      token = Sys.getenv("TOKEN"))$data
 
-records <- get_records() %>% 
+records <- get_records() 
+
+write.csv(records, paste0("data/fr_redcap_data_export_", today(), ".csv"),
+          row.names = F, na = "")
+  
+records <- records %>% 
   filter(!is.na(covid_19_swab_result) & 
            redcap_event_name == 'baseline_arm_1' & 
            !is.na(ce_email))
 
-# write.csv(records, paste0("data/fr_redcap_data_export_", today(), ".csv"), 
-#           row.names = F, na = "")
+
 
 total_subjects <- nrow(records)
 
