--- a/survey_report.Rmd
+++ b/survey_report.Rmd
@@ -32,7 +32,7 @@ write.csv(records, paste0("data/fr_redcap_data_export_", today(), ".csv"),
 records <- records %>% 
   filter(!is.na(covid_19_swab_result) & 
            redcap_event_name == 'baseline_arm_1' & 
-           !is.na(ce_email))
+           !is.na(ce_email) & send_survey_invites == 1)
 
 
 
