--- a/results_summary_by_agency.Rmd
+++ b/results_summary_by_agency.Rmd
@@ -26,23 +26,24 @@ project_start_date <- ymd("2020-04-08")
 script_run_time <- with_tz(now(), tzone = Sys.getenv("TIME_ZONE"))
 ```
 
-This is a person-centric report about the study participants in the First Responder COVID-19 Project. It summarizes the test results by agency. This report only includes study participants who have received a swab result.
+This is a person-centric report about the study participants in the First Responder COVID-19 Project. It summarizes the test results by agency. This report only includes study participants who have received a swab or saliva result.
 
 ```{r}
 # read appointment data betewwen 2020-04-08 and current_date 
-records <- get_records(raw_or_label = "label") 
+records <- get_records(raw_or_label = "label") %>%
+  mutate(swab_saliva=coalesce(covid_19_swab_result, saliva_result))
 covid_cols <- c("Agency", "Negative", "Positive", "Total")
 igg_cols <- c("Agency", "Negative", "Positive","Indeterminate", "Total")
 ```
 
 ```{r}
 covid_q_agency_counts <- filter_records_by_agency(
-    covid_19_swab_result,
+    swab_saliva,
     q_agency,
     send_survey_invites == "Yes" |
-      covid_19_swab_result == 'Positive'
+      swab_saliva == 'Positive' 
   ) %>%
-  create_summary_table(covid_19_swab_result, covid_cols)
+  create_summary_table(swab_saliva, covid_cols)
 
 kable(covid_q_agency_counts, "latex", booktabs = T,
       caption = paste("COVID-19 Test Results by Agency for",
@@ -52,35 +53,35 @@ kable(covid_q_agency_counts, "latex", booktabs = T,
 ```
 
 ```{r fig.align="center", fig.height=6, fig.width=12}
-appt_over_time <- filter_records_by_agency(covid_19_swab_result,
+appt_over_time <- filter_records_by_agency(swab_saliva,
     q_agency,
     send_survey_invites == "Yes" |
-      covid_19_swab_result == 'Positive') %>%
+      swab_saliva == 'Positive') %>%
   filter(as_date(test_date_and_time) != '1969-12-31') %>% 
   mutate(test_date_and_time = as_date(test_date_and_time)) %>% 
-  count(test_date_and_time, covid_19_swab_result) 
+  count(test_date_and_time, swab_saliva) 
 
 ggplot(appt_over_time, aes(x = test_date_and_time, y = n, 
-                           color = covid_19_swab_result))+
+                           color = swab_saliva))+
   geom_line()+
   geom_point()+
   scale_y_continuous(breaks = seq(0, max(appt_over_time$n), by = 20))+
-  scale_x_date(date_breaks = "1 week", date_labels = "%b-%d")+
+  scale_x_date(date_breaks = "1 month", date_labels = "%b-%y")+
   labs(x = "Appointment Date", y = "# Persons", 
-       title = "Swab Result Over Time",
-       colour = "Covid-19 Swab Result")+
+       title = "Swab or Saliva Test Result Over Time",
+       colour = "Covid-19 Result")+
   theme(plot.title = element_text(hjust = 0.5))
 ```
 
 ```{r}
 covid_q_ufhealth_department_counts <- filter_records_by_agency(
-    covid_19_swab_result,
+    swab_saliva,
     q_ufhealth_department,
     send_survey_invites == "Yes" |
-      covid_19_swab_result == 'Positive'
+      swab_saliva == 'Positive'
   ) %>%
   filter(!is.na(Agency)) %>%
-  create_summary_table(covid_19_swab_result, covid_cols)
+  create_summary_table(swab_saliva, covid_cols)
 
 kable(covid_q_ufhealth_department_counts, "latex", booktabs = T,
       caption = paste("COVID-19 Test Results by UF Health Department for",
